--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -39,6 +39,7 @@
   display: flex;
   justify-content: flex-end;
   &__list {
+    // border:1px solid red;
     display: flex;
     list-style-type: none;
     font-weight: 300;
@@ -46,12 +47,15 @@
 
   &__link {
     margin-left: 1.875rem;
-    color: $off-white;
+    color: white;
+    font-weight: 300;
     font-size: 1rem;
     text-decoration: none;
+    mix-blend-mode: difference;
 
     &:hover {
       color: $light-blue;
+      mix-blend-mode: normal
     }
   }
 
@@ -135,18 +139,18 @@
 .folder-icon-container {
   grid-area: folder;
   margin-top: 2.375rem;
-  justify-self: end;
+  justify-self: flex-end;
 }
 
 .arrow-icon-container {
   grid-area: arrow;
-  align-self: end;
+  align-self: flex-end;
   margin-bottom: 0.75rem;
 }
 
 .slogan-container {
   grid-area: slogan;
-  align-self: end;
+  align-self: flex-end;
   &__text {
     font-weight: 700;
     font-size: 5.938rem;
@@ -176,16 +180,16 @@
   }
 }
 
-@media screen and (max-width: 1600px) {
-  .navbar {
-    &__list {
-      display: none;
-    }
+@media screen and (max-width: 1650px) {
+  // .navbar {
+  //   &__list {
+  //     display: none;
+  //   }
 
-    &__toggle {
-      display: block;
-    }
-  }
+  //   &__toggle {
+  //     display: block;
+  //   }
+  // }
 
   .header-container {
     grid-template-areas:
