--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -1,10 +1,7 @@
+@import "./mixins";
+
 .container {
-    height: 100%;
-    margin: 0 25vw;
-    padding: 5rem 0 0 0;
-    
-    display: flex;
-    flex-direction: column;
+    @include container;
 
     h2 {
       margin-bottom: 1.5rem;
@@ -14,4 +11,11 @@
       font-size: 1.13rem;
       line-height: 200%;
     }
+}
+
+@media screen and (max-width: 320px) {
+  .container {
+    width: 95%;
+    margin: auto;
+  }
 }
