--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -30,7 +30,7 @@
 }
 
 .container {
-  @include container;
+  @include heroContainer;
 }
 
 .navbar {
@@ -63,6 +63,9 @@
     display: none;
     color: $off-white;
     font-size: 1.7rem;
+    position: absolute;
+    top: 8px;
+    right: 8px;
   }
 }
 
@@ -181,15 +184,16 @@
 }
 
 @media screen and (max-width: 1650px) {
-  // .navbar {
-  //   &__list {
-  //     display: none;
-  //   }
+  .navbar {
+    &__list {
+      display: none;
+    }
 
-  //   &__toggle {
-  //     display: block;
-  //   }
-  // }
+    &__toggle {
+      display: block;
+      
+    }
+  }
 
   .header-container {
     grid-template-areas:
@@ -240,5 +244,40 @@
       font-size: 7.9vw;
       line-height: 7vw;
     }
+  }
+}
+
+
+@media screen and (max-width: 320px) {
+
+  .container {
+    width: 100%;
+  }
+
+  .header-container {
+    margin-top: 0;
+  }
+
+  .header {
+    h1 {
+      font-size: 2.5rem;
+    }
+  }
+
+  .header {
+    &__btn-container {
+      &__secondaryBtn {
+        margin: auto;
+        margin-top: 1rem;
+        color: $off-white;
+      }
+
+      &__btnIcon {
+        color: $off-white;
+      }
+    }
+  }
+  .slogan-container {
+    padding: 0 2.5%;
   }
 }
