--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -100,3 +100,25 @@
     transform: scale(1.15);
   }
 }
+
+@media screen and (max-width: 320px) {
+  .container {
+    width: 95%;
+    margin: auto;
+  }
+
+  .projectsContainer {
+    padding: 1.56rem 0;
+    flex-flow: column wrap;
+    gap: 1.5rem;
+  }
+  
+  .projectCard {
+    width: 95%;
+    margin: auto;
+
+    &:hover {
+      transform: none;
+    }
+  }
+}
