--- a/styles/Skills.module.scss
+++ b/styles/Skills.module.scss
@@ -52,3 +52,22 @@
   color: $gray;
   }
 }
+
+@media screen and (max-width: 320px) {
+  .container {
+    width: 95%;
+    margin: auto;
+  }
+
+  .row {
+    img {
+      width: 13px;
+      height: 15px;
+    }
+  }
+  
+
+  .skillItemContainer {
+    flex-flow: row wrap;
+  }
+}
