--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -1,12 +1,21 @@
 @import "./variables";
 
-@mixin container {
+@mixin heroContainer {
   width: 60vw;
   height: 100%;
   margin: auto;
   padding-top: 2.25rem;
   padding-bottom: 4.5rem;
 
+  display: flex;
+  flex-direction: column;
+}
+
+@mixin container {
+  height: 100%;
+  width: 50%;
+  margin: auto;
+  padding: 5rem 0 0 0;
   display: flex;
   flex-direction: column;
 }
@@ -29,3 +38,4 @@
     color: $accent;
   }
 }
+
