--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,6 +13,10 @@ body {
   font-size: 16px;
   color: $dark-blue;
   overflow-x: hidden;
+
+  @media screen and (max-width: 320px) {
+    text-align: center;
+  }
 }
 
 h2 {
