--- a/styles/Skills.module.scss
+++ b/styles/Skills.module.scss
@@ -1,73 +1,95 @@
 @import "./variables";
 @import "./mixins";
 
-.container {
-  height: 100%;
-  margin: 0 25vw;
-
-  padding-top: 2.5rem;
-
-  display: flex;
-  flex-direction: column;
-}
-
-.row {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  margin-top: 1.5rem;
-
-  img {
-   width: 1.41rem;
-   height: 5.81rem;
-  }
-}
-
-.skillItemContainer {
-  width: 100%;
-  display: flex;
-  flex-flow: row nowrap;
-  list-style-type: none;
-  justify-content: space-between;
-  margin-top: 1.7rem;
-}
-
-.skillItem {
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-  text-align: center;
-  height: fit-content;
-
-  img {
-    width: auto;
-    height: 2rem;
-  }
-
-  p {
-  text-align: start;
-  white-space: pre-wrap;
-  font-weight: 300;
-  line-height: 24px;
-  color: $gray;
-  }
-}
-
-@media screen and (max-width: 320px) {
+@media screen {
   .container {
     width: 95%;
     margin: auto;
+    padding-top: 2.5rem;
   }
 
   .row {
-    img {
-      width: 13px;
-      height: 15px;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+
+     img {
+      width: 30%;
+      height: auto;
     }
+
+    .bracket {
+      display: none;
+    }
+
+   
   }
   
 
   .skillItemContainer {
-    flex-flow: row wrap;
+    width: 100%;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: 30% 30% 30%;
+    gap: 1rem;
+    list-style: none;
   }
 }
+
+@media screen and (min-width: 1400px) {
+  .container {
+    width: auto;
+    margin: 0 25vw;
+  }
+
+  .row {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    margin-top: 1.5rem;
+
+    img {
+     width: 1.41rem;
+     height: 5.81rem;
+    }
+
+    .bracket {
+      display: inline-block;
+    }
+  }
+
+  .skillItemContainer {
+    width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+    list-style-type: none;
+    justify-content: space-between;
+    margin-top: 1.7rem;
+  }
+
+  .skillItem {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    text-align: center;
+    height: fit-content;
+
+    img {
+      width: auto;
+      height: 2rem;
+    }
+
+    p {
+    text-align: start;
+    white-space: pre-wrap;
+    font-weight: 300;
+    line-height: 24px;
+    color: $gray;
+    }
+  }
+}
+
+
+
+
+
