--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -13,9 +13,11 @@
     }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 568px) {
   .container {
-    width: 95%;
+    padding: 0 4vw;
+    text-align: left;
+    width: 100%;
     margin: auto;
   }
 }
