--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -16,7 +16,7 @@
   background-color: $gray;
   display: flex;
   flex-flow: row wrap;
-  padding: 2.5rem 1rem;
+  padding: 1.5rem 1rem;
   justify-content: space-around;
 }
 
@@ -31,10 +31,14 @@
   box-shadow: 10px 10px 50px 5px rgba(0,0,0,0.25);
   display: flex;
   flex-direction: column;
+  margin: 0.8rem 0;
 
   transition: all .2s ease-in-out;
   img {
     border-radius: 5px;
+    width: 100%;
+    height: auto;
+
   }
 
   .tech {
@@ -101,21 +105,22 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 568px) {
   .container {
-    width: 95%;
+    width: 100%;
     margin: auto;
   }
 
   .projectsContainer {
-    padding: 1.56rem 0;
+    padding: 1.56rem 4vw;
     flex-flow: column wrap;
     gap: 1.5rem;
   }
   
   .projectCard {
-    width: 95%;
+    width: 100%;
     margin: auto;
+    height: auto;
 
     &:hover {
       transform: none;
