--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,9 +1,9 @@
 $off-white: #fffaf6;
 $dark-blue: #384561;
-$light-blue:  #838b9d;
+$medium-blue: #8790a5;
+$light-blue: #838b9d;
 $accent: #e27131;
 $off-white-dark: #fff0e3;
 $error: #a60000;
-$text: #2c3750;
 $gray: #a3aabc;
 $light-gray: #d3d6dd;
