--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -2,134 +2,328 @@
 @import "./mixins";
 
 .contact {
-  * {
-    color: $off-white;
-  }
-  margin-top: -1rem;
-  background-color: $dark-blue;
-  h2 {
-    color: $off-white;
-  }
+	* {
+		color: $off-white;
+	}
+	margin-top: -1rem;
+	background-color: $dark-blue;
+	h2 {
+		color: $off-white;
+	}
 }
 
-
 .container {
-    width: 100vw;
-    min-height: 100vh;
-    padding: 3.5rem 0 0 0;
-    display: flex;
-    flex-direction: column;
+	width: 100vw;
+	min-height: 100vh;
+	padding: 3.5rem 0 0 0;
+	display: flex;
+	flex-direction: column;
 }
 
 .row {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 30rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 0 25vw;
 }
 
 .iconContainer {
-  display: flex;
-  align-items: center;
-  gap: 1.38rem;
+	display: flex;
+	align-items: center;
+	gap: 1.38rem;
 
-  a {
-    cursor: pointer;
+	a {
+		cursor: pointer;
 
-    &:hover {
-      transform: scale(1.2);
-    }
-  }
+		&:hover {
+			transform: scale(1.2);
+		}
+	}
 
-  .socialIcon {
-    width: 2.06rem;
-    height: auto;
-  }
+	.socialIcon {
+		width: 2.06rem;
+		height: auto;
+	}
 }
 
 .formContainer {
-  height: 100%;
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-  justify-content: center;
-  flex-grow: 1;
+	height: 100%;
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: center;
+	justify-content: center;
+	flex-grow: 1;
 }
 
 .contactForm {
-  display: flex;
-  flex-flow: column nowrap;
-  width: 33.88rem;
-  
+	display: flex;
+	flex-flow: column nowrap;
+	width: 33.88rem;
 
-  .formGroup {
-    margin-bottom: 1.5rem;
+	.formGroup {
+		margin-bottom: 1.5rem;
 
-    label {
-      display: block;
-      margin-bottom: 0.3rem;
-      font-size: 1.2rem;
-    }
+		label {
+			display: block;
+			margin-bottom: 0.3rem;
+			font-size: 1.2rem;
+		}
 
-    input[type="text"],
-    input[type="email"],
-    textarea {
-      width: 100%;
-      border-radius: 5px;
-      padding: 0.4rem 1.5rem;
-      color: $dark-blue;
-      font-size: 1rem;
-      border: none;
-      outline: none;
-    }
+		input[type="text"],
+		input[type="email"],
+		textarea {
+			width: 100%;
+			border-radius: 5px;
+			padding: 0.4rem 1.5rem;
+			color: $dark-blue;
+			font-size: 1rem;
+			border: none;
+			outline: none;
+		}
 
-    textarea {
-      padding: 0.8rem 1.5rem;
-    }
+		textarea {
+			padding: 0.8rem 1.5rem;
+			height: 12.5rem;
+		}
+	}
 
-    
-  }
-
-  input[type="submit"] {
-    width: 8rem;
-    font-size: 1.2rem;
-    background-color: $accent;
-    border-radius: 5px;
-    border: 3px solid transparent;
-    padding: .4rem 0;
-    font-weight: 500;
-    cursor: pointer;
-    &:hover {
-      color: $off-white;
-      border-color: $off-white;
-      background: none;
-      font-weight: 700;
-    }
-  }
+	input[type="submit"] {
+		width: 8rem;
+		font-size: 1.2rem;
+		background-color: $accent;
+		border-radius: 5px;
+		border: 3px solid transparent;
+		padding: .4rem 0;
+		font-weight: 500;
+		cursor: pointer;
+		&:hover {
+			color: $off-white;
+			border-color: $off-white;
+			background: none;
+			font-weight: 700;
+		}
+	}
 }
-
-
 
 .footerContainer {
-  padding: 1rem;
-  text-align: center;
-  line-height: 120%;
+	padding: 0.7rem;
+	text-align: center;
+	line-height: 120%;
+
+	p {
+		font-size: 0.9rem;
+		font-weight: 300;
+		color: $gray;
+	}
 }
 
+// for 1536px
+@media screen and (max-height: 880px) and (max-width: 1536px) {
+	.container {
+		padding-top: 2.5rem;
+	}
+
+	.iconContainer {
+		gap: 1rem;
+
+		.socialIcon {
+			width: 1.7rem;
+		}
+	}
+
+	.contactForm {
+		width: 28rem;
+
+		.formGroup {
+			margin-bottom: 1rem;
+
+			label {
+				margin-bottom: 0.2rem;
+				font-size: 1.1rem;
+			}
+
+			input[type="text"],
+			input[type="email"],
+			textarea {
+				padding: 0.2rem 1.2rem;
+				font-size: 1rem;
+			}
+
+			textarea {
+				padding: 0.4rem 1.2rem;
+				height: 10rem;
+			}
+		}
+
+		input[type="submit"] {
+			width: 7.5rem;
+			font-size: 1.1rem;
+			padding: .2rem 0;
+		}
+	}
+
+	.footerContainer {
+		padding: 0.5rem;
+		line-height: 120%;
+
+		p {
+			font-size: 0.86rem;
+		}
+	}
+}
+
+// for 1366px
+@media screen and (max-height: 729px) and (max-width: 1366px) {
+	.container {
+		padding-top: 2rem;
+	}
+
+	.iconContainer {
+		gap: 0.5rem;
+
+		.socialIcon {
+			width: 1.5rem;
+		}
+	}
+
+	.contactForm {
+		width: 24rem;
+
+		.formGroup {
+			margin-bottom: 0.7rem;
+
+			label {
+				font-size: 1rem;
+			}
+
+			input[type="text"],
+			input[type="email"],
+			textarea {
+				padding: 0.2rem 1.2rem;
+				font-size: 1rem;
+			}
+
+			textarea {
+				padding: 0.4rem 1.2rem;
+				height: 9rem;
+			}
+		}
+
+		input[type="submit"] {
+			width: 7rem;
+			font-size: 1rem;
+			padding: .1rem 0;
+		}
+	}
+
+	.footerContainer {
+		line-height: 105%;
+		p {
+			font-size: 0.75rem;
+		}
+	}
+}
+
+//for all < 1320px
+@media screen and (max-width: 1320px) {
+	.container {
+		padding: 5rem 2rem 0rem 2rem;
+	}
+
+	.row {
+		width: 100%;
+		flex-flow: row wrap;
+		margin: 0;
+		align-items: space-between;
+	}
+}
+
+//for IPAD PRO
+@media screen and (min-height: 1050px) and (max-width: 1024px) {
+	.container {
+		padding: 4rem 2rem 0rem 2rem;
+	}
+}
+
+//for IPAD
+@media screen and (min-height: 1024px) and (max-width: 768px) {
+	.container {
+		padding: 3rem 1.5rem 0rem 1.5rem;
+	}
+}
+
+// for PHONES
 @media screen and (max-width: 568px) {
-  .row {
-    flex-flow: column wrap;
-    margin: auto;
-  }
+	.container {
+		padding: 8vw 4vw 0 4vw;
+	}
 
-  .contactForm {
-    input[type="submit"] {
-      width: 95%;
-      margin: auto;
-    }
-  }
+	.row {
+		flex-flow: row wrap;
+		margin: 0;
+		align-items: space-between;
+	}
 
-  .contactForm {
-    width: 95%;
-  }
+	.iconContainer {
+		display: flex;
+		gap: 4vw;
+	}
+
+	.socialIcon {
+		width: 6vw;
+		height: auto;
+	}
+
+	.contactForm {
+		width: 100%;
+
+		.formGroup {
+			margin-bottom: 0.7rem;
+
+			label {
+				margin-bottom: 0.2rem;
+				font-size: 1.1rem;
+				text-align: start;
+			}
+
+			input[type="text"],
+			input[type="email"],
+			textarea {
+				width: 100%;
+				padding: 0.3rem 1.3rem;
+			}
+
+			textarea {
+				padding: 0.5rem 1.3rem;
+				height: 35vw;
+			}
+		}
+
+		input[type="submit"] {
+			width: 8rem;
+			font-size: 1.15rem;
+			padding: .25rem 0;
+		}
+	}
+
+	.footerContainer {
+		padding: 1.5vw;
+		text-align: center;
+		line-height: 100%;
+
+		p {
+			font-size: 0.8rem;
+		}
+	}
+}
+
+//for phones HORIZONTAL
+@media screen and (max-width: 812px) and (max-height: 567px) {
+	.contactForm {
+		.formGroup {
+			textarea {
+				height: 20vw;
+			}
+		}
+	}
 }
