--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -2,128 +2,443 @@
 @import "./mixins";
 
 .container {
-  height: 100%;
-  margin: 0 25vw;
-
-  padding: 6rem 0 1.5rem 0;
-
-  display: flex;
-  flex-direction: column;
+	height: 100%;
+	margin: 0 25vw;
+	padding: 6rem 0 1.5rem 0;
+	display: flex;
+	flex-direction: column;
 }
 
 .projectsContainer {
-  width: 100%;
-  background-color: $gray;
-  display: flex;
-  flex-flow: row wrap;
-  padding: 1.5rem 1rem;
-  justify-content: space-around;
+	width: 100%;
+	background-color: $gray;
+	display: flex;
+	flex-flow: row wrap;
+	padding: 2rem 1rem;
+	justify-content: space-around;
 }
 
 .projectCard {
-  flex-basis: 17vw;
-  height: 26.5rem;
-  background-color: $off-white;
-  padding: 1.44rem;
-  border-radius: 5px;
-  -moz-box-shadow: 10px 10px 50px 5px rgba(0,0,0,.25);
-  -webkit-box-shadow: 10px 10px 50px 5px rgba(0,0,0,.25);
-  box-shadow: 10px 10px 50px 5px rgba(0,0,0,0.25);
-  display: flex;
-  flex-direction: column;
-  margin: 0.8rem 0;
+	flex-basis: 20rem;
+	height: 100%;
+	background-color: $off-white;
+	padding: 1.44rem;
+	border-radius: 5px;
+	-moz-box-shadow: 10px 10px 50px 5px rgba(0, 0, 0, .25);
+	-webkit-box-shadow: 10px 10px 50px 5px rgba(0, 0, 0, .25);
+	box-shadow: 10px 10px 50px 5px rgba(0, 0, 0, 0.25);
+	display: flex;
+	flex-direction: column;
+	margin: 0.8rem 0;
 
-  transition: all .2s ease-in-out;
-  img {
-    border-radius: 5px;
-    width: 100%;
-    height: auto;
+	transition: all .2s ease-in-out;
+	img {
+		border-radius: 5px;
+		width: 100%;
+		height: auto;
+	}
 
-  }
+	.tech {
+		margin-top: 0.2rem;
+		font-size: 1rem;
+		font-weight: 300;
+		color: $medium-blue;
+	}
 
-  .tech {
-    font-size: 1rem;
-    font-weight: 300;
-    color: $gray;
-  }
+	h3 {
+		margin-top: 0.7rem;
+		font-size: 1.2rem;
+	}
 
-  h3 {
-    margin-top: 0.63rem;
-    font-size: 1.2rem;
-  }
+	.description {
+		margin-top: 0.3rem;
+		font-size: 1rem;
+		line-height: 140%;
+	}
 
-  .description {
-    font-size: 1rem;
-    line-height: 140%;
-  }
+	.btnContainer {
+		margin-top: 1.3rem;
+		flex-grow: 1;
+		display: flex;
+		align-items: flex-end;
+		gap: 1.5rem;
 
-  .btnContainer {
-    flex-grow: 1;
-    display: flex;
-    align-items: flex-end;
-    gap: 1rem;
+		button {
+			@include btnDefault;
+			background-color: $accent;
+			cursor: pointer;
+			border: none;
+			border-radius: 5px;
+			color: $off-white;
+			width: 7.5rem;
+			height: 2.3rem;
+			font-size: 1.13rem;
+			font-weight: 400;
 
-    button {
-      @include btnDefault;
-      background-color: $accent;
-      cursor: pointer;
-      border: none;
-      border-radius: 5px;
-      color: $off-white;
-      width: 7.5rem;
-      height: 2.3rem;
-      font-size: 1.13rem;
-      font-weight: 400;
+			&:hover {
+				font-weight: 500;
+			}
+		}
 
-      &:hover {
-        font-weight: 500; 
-      }
-    }
+		a {
+			@include linkDefault;
+			color: $medium-blue;
+			display: flex;
+			align-items: center;
+			height: 2.3rem;
+			cursor: pointer;
+			font-size: 1.13rem;
+			font-weight: 400;
 
-    a {
-      @include linkDefault;
-      display: flex;
-      align-items: center;
-      height: 2.3rem;
-      cursor: pointer;
-      font-size: 1.13rem;
-      font-weight: 400;
+			.githubIcon {
+				font-size: 1.1rem;
+				margin-right: .25rem;
+			}
+		}
+	}
 
-      .githubIcon {
-        font-size: 1.2rem;
-        margin-right: .25rem;
-      }
-    }
-  }
-  
-  // ===============================
-  // CARD HOVER
-  // ===============================
+	// ===============================
+	// CARD HOVER
+	// ===============================
 
-  &:hover {
-    transform: scale(1.12);
-  }
+	&:hover {
+		transform: scale(1.12);
+	}
 }
 
+//for squeezed MAC and 1920px
+@media screen and (min-height: 881px) and (max-width: 1635px) {
+	.projectCard {
+		transform: scale(0.9);
+		margin: -1rem;
+
+		&:hover {
+			transform: scale(1.02);
+		}
+	}
+}
+
+//for super squeezed MAC and 1920px
+@media screen and (min-height: 881px) and (max-width: 1472px) {
+	.projectCard {
+		transform: scale(0.8);
+		margin: -2rem;
+
+		&:hover {
+			transform: scale(0.95);
+		}
+	}
+}
+
+// for 1536px
+@media screen and (max-height: 880px) and (max-width: 1536px) {
+	.container {
+		padding-top: 4rem;
+	}
+
+	.projectsContainer {
+		padding: 1.5rem 1rem;
+	}
+
+	.projectCard {
+		flex-basis: 17rem;
+	}
+}
+
+// for squeezed 1536px
+@media screen and (max-height: 880px) and (max-width: 1400px) {
+	.projectCard {
+		transform: scale(0.9);
+		margin: -1rem;
+
+		&:hover {
+			transform: scale(1.02);
+		}
+	}
+}
+
+// for super squeezed 1536px
+@media screen and (max-height: 880px) and (max-width: 1262px) {
+	.projectCard {
+		transform: scale(0.8);
+		margin: -2rem;
+
+		&:hover {
+			transform: scale(0.95);
+		}
+	}
+}
+
+//for 1536  <1320px
+@media screen and (max-height: 880px) and (max-width: 1120px) {
+	.container {
+		padding: 5rem 2rem 2rem 2rem;
+		text-align: left;
+		width: 100%;
+		margin: auto;
+	}
+	.projectsContainer {
+		width: 100%;
+		background-color: $gray;
+		display: flex;
+		flex-flow: row wrap;
+		padding: 2rem 0.5rem;
+		justify-content: center;
+		gap: 2vw;
+	}
+
+	.projectCard {
+		padding: 1.2rem;
+		flex-basis: 20rem;
+		transform: scale(1);
+		margin: 0;
+
+		&:hover {
+			transform: scale(1.12);
+		}
+	}
+}
+
+// for 1366px
+@media screen and (max-height: 729px) and (max-width: 1366px) {
+	.container {
+		padding-top: 3rem;
+	}
+
+	.projectsContainer {
+		padding: 1rem 0.5rem;
+	}
+
+	.projectCard {
+		flex-basis: 15rem;
+		padding: 1rem;
+		margin: 0.5rem 0;
+		transform: scale(1);
+
+		&:hover {
+			transform: scale(1.12);
+		}
+
+		.tech {
+			font-size: 0.86rem;
+		}
+
+		h3 {
+			margin-top: 0.4rem;
+			font-size: 1.1rem;
+		}
+
+		.description {
+			font-size: 0.86rem;
+			line-height: 160%;
+		}
+
+		.btnContainer {
+			margin-top: 0.7rem;
+			gap: 0.8rem;
+
+			button {
+				width: 6.5rem;
+				height: 1.9rem;
+				font-size: 1rem;
+			}
+
+			a {
+				height: 1.9rem;
+				cursor: pointer;
+				font-size: 1rem;
+				font-weight: 400;
+
+				.githubIcon {
+					font-size: 0.9rem;
+					margin-right: .1rem;
+				}
+			}
+		}
+	}
+}
+
+// for 1229px
+@media screen and (max-height: 729px) and (max-width: 1229px) {
+	.projectCard {
+		flex-basis: 14rem;
+	}
+
+	.projectCard {
+		.btnContainer {
+			button {
+				width: 6.3rem;
+				height: 1.9rem;
+				font-size: 1rem;
+			}
+
+			a {
+				height: 1.9rem;
+				font-size: 0.9rem;
+
+				.githubIcon {
+					font-size: 0.85rem;
+					margin-bottom: .1rem;
+					margin-right: .2rem;
+				}
+			}
+		}
+
+		&:hover {
+			transform: scale(1.07);
+		}
+	}
+}
+
+//for IPAD PRO
+@media screen and (min-height: 1366px) and (max-width: 1320px) {
+	.container {
+		width: 100%;
+		margin: 0;
+		padding: 4.5rem 2rem 2rem 2rem;
+	}
+
+	.projectsContainer {
+		width: 100%;
+		background-color: $gray;
+		display: flex;
+		flex-flow: row wrap;
+		padding: 2rem 0.5rem;
+		justify-content: center;
+		gap: 2vw;
+	}
+
+	.projectCard {
+		padding: 1.2rem;
+		flex-basis: 20rem;
+	}
+}
+
+//for Mac and 1920px  <1320px
+@media screen and (min-height: 881px) and (max-width: 1320px) {
+	.container {
+		padding: 5rem 2rem 2rem 2rem;
+		text-align: left;
+		width: 100%;
+		margin: auto;
+	}
+	.projectsContainer {
+		width: 100%;
+		background-color: $gray;
+		display: flex;
+		flex-flow: row wrap;
+		padding: 2rem 0.5rem;
+		justify-content: center;
+		gap: 2vw;
+	}
+
+	.projectCard {
+		padding: 1.2rem;
+		flex-basis: 20rem;
+		transform: scale(1);
+		margin: 0;
+
+		&:hover {
+			transform: scale(1.12);
+		}
+	}
+}
+
+//for all  <1136px
+@media screen and (max-width: 1136px) {
+	.container {
+		padding: 5rem 2rem 2rem 2rem;
+		text-align: left;
+		width: 100%;
+		margin: auto;
+	}
+	.projectsContainer {
+		width: 100%;
+		background-color: $gray;
+		display: flex;
+		flex-flow: row wrap;
+		padding: 2rem 0.5rem;
+		justify-content: center;
+		gap: 2vw;
+	}
+
+	.projectCard {
+		padding: 1.2rem;
+		flex-basis: 20rem;
+		transform: scale(1);
+		margin: 0;
+
+		&:hover {
+			transform: scale(1.12);
+		}
+	}
+}
+
+//for all  <1320px
+@media screen and (max-width: 1320px) {
+	.container {
+		padding: 5rem 2rem 2rem 2rem;
+		text-align: left;
+		width: 100%;
+		margin: auto;
+	}
+}
+
+//for all <852px
+@media screen and (max-width: 1016px) {
+	.projectsContainer {
+		justify-content: space-around;
+	}
+
+	.projectCard {
+		padding: 1.2rem;
+		flex-basis: 20rem;
+	}
+}
+
+//for IPAD
+@media screen and (min-height: 1024px) and (max-width: 768px) {
+	.container {
+		width: 100%;
+		margin: 0;
+		padding: 4rem 1.5rem 1.5rem 1.5rem;
+	}
+
+	.projectCard {
+		margin: 0.5rem 0;
+	}
+}
+
+// for PHONES
 @media screen and (max-width: 568px) {
-  .container {
-    width: 100%;
-    margin: auto;
-  }
+	.container {
+		width: 100%;
+		margin: 0;
+		padding: 10vw 4vw 6vw 4vw;
 
-  .projectsContainer {
-    padding: 1.56rem 4vw;
-    flex-flow: column wrap;
-    gap: 1.5rem;
-  }
-  
-  .projectCard {
-    width: 100%;
-    margin: auto;
-    height: auto;
+		h2 {
+			text-align: start;
+		}
+	}
 
-    &:hover {
-      transform: none;
-    }
-  }
+	.projectsContainer {
+		padding: 6vw 4vw;
+		flex-flow: column wrap;
+		gap: 1.5rem;
+	}
+
+	.projectCard {
+		width: 100%;
+		margin: 0;
+		height: auto;
+		text-align: start;
+
+		.btnContainer {
+			gap: 8vw;
+		}
+
+		&:hover {
+			transform: none;
+		}
+	}
 }
