--- a/styles/WhyMe.module.scss
+++ b/styles/WhyMe.module.scss
@@ -2,66 +2,228 @@
 @import "./mixins";
 
 .container {
-    height: 100%;
-    margin: 0 25vw;
-    padding: 6rem 0 2.25rem 0;
-
-    display: flex;
-    flex-direction: column;
+	height: 100%;
+	margin: 0 25vw;
+	padding: 6rem 0 2.25rem 0;
+	display: flex;
+	flex-direction: column;
 }
 
 .row {
-  display: flex;
-  gap: 7.88rem;
-  justify-content: center;
-  position: relative;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: relative;
+	margin: 0 17vw;
 }
 
 .card {
-  width: 19.69rem;
-  background-color: $off-white-dark;
-  padding: 1.88rem;
-  padding-bottom: 1rem;
-  border-radius: 5px;
+	width: 19.69rem;
+	background-color: $off-white-dark;
+	padding: 2rem;
+	border-radius: 5px;
 
-  h3 {
-    font-size: 1.38rem;
-    margin-bottom: 1.5rem;
-  }
+	h3 {
+		font-size: 1.38rem;
+		margin-bottom: 1.5rem;
+		display: flex;
+		align-items: center;
 
-  p {
-    font-size: 1.13rem;
-    line-height: 190%;
-  }
+		svg {
+			margin-right: 0.5rem;
+		}
+	}
+
+	p {
+		font-size: 1.13rem;
+		line-height: 190%;
+	}
 }
 
 .line {
-  top: 15vh;
-  position: absolute;
-  z-index: -1;
-  width: 33vw;
-  border-bottom: 4px dashed #ffecdc;
+	position: absolute;
+	z-index: -1;
+	width: 100%;
+	border-bottom: 4px dashed #ffecdc;
 }
 
 .wave {
-  margin-top: 6rem;
-  width: 100%;
+	margin-top: 8vh;
+	width: 100%;
 }
 
+//for squeezed MAC and 1920px
+@media screen and (min-height: 881px) and (max-width: 1450px) {
+	.row {
+		margin: 0 10vw;
+	}
+}
+
+// for 1536px
+@media screen and (max-height: 880px) and (max-width: 1536px) {
+	.container {
+		padding-top: 4rem;
+	}
+
+	.card {
+		padding: 1.5rem;
+		width: 18rem;
+
+		h3 {
+			font-size: 1.1rem;
+			margin-bottom: 1rem;
+		}
+
+		p {
+			font-size: 1rem;
+		}
+	}
+}
+
+// for squeezed 1536px
+@media screen and (min-height: 730px) and (max-height: 880px) and (max-width: 1400px) {
+	.card {
+		width: 20vw;
+	}
+}
+
+// for 1366px
+@media screen and (max-height: 729px) and (max-width: 1366px) {
+	.container {
+		padding-top: 3rem;
+	}
+
+	.card {
+		padding: 1.3rem;
+		width: 16rem;
+
+		h3 {
+			margin-bottom: 0.7rem;
+		}
+	}
+}
+
+// for squeezed 1366px
+@media screen and (max-height: 729px) and (max-width: 1245px) {
+	.card {
+		width: 20.5vw;
+	}
+}
+
+// for 1229px
+@media screen and (max-height: 624px) and (max-width: 1229px) {
+	.card {
+		width: 20.5vw;
+	}
+}
+
+//for all <1320px
+@media screen and (max-height: 1050px) and (max-width: 1320px) {
+	.container {
+		margin: 0;
+		padding: 4rem 2rem 2rem 2rem;
+	}
+
+	.row {
+		margin: 0 3vw;
+	}
+
+	.card {
+		width: 29vw;
+		background-color: $off-white-dark;
+		padding: 2rem;
+		border-radius: 5px;
+	}
+
+	.wave {
+		margin-top: 4.5rem;
+		width: 100%;
+	}
+}
+
+//for all <852px
+@media screen and (max-width: 852px) {
+	.row {
+		flex-flow: row wrap;
+		justify-content: space-around;
+	}
+	.card {
+		width: 43vw;
+		margin-top: 3vw;
+	}
+
+	.line {
+		display: none;
+	}
+}
+
+//for IPAD PRO
+@media screen and (min-height: 1366px) and (max-width: 1024px) {
+	.container {
+		width: 100%;
+		margin: 0;
+		padding: 3rem 2rem 2rem 2rem;
+	}
+	.row {
+		margin: 0 2rem;
+	}
+
+	.card {
+		width: 29vw;
+		background-color: $off-white-dark;
+		padding: 2rem;
+		border-radius: 5px;
+	}
+
+	.wave {
+		margin-top: 5rem;
+		width: 100%;
+	}
+}
+
+//for IPAD
+@media screen and (min-height: 1024px) and (max-width: 768px) {
+	.container {
+		width: 100%;
+		margin: 0;
+		padding: 2rem 1.5rem 1.5rem 1.5rem;
+	}
+}
+
+//for PHONES
 @media screen and (max-width: 568px) {
+	.container {
+		margin: 0;
+		padding: 10vw 4vw 6vw 4vw;
 
-  .row {
-    flex-flow: column wrap;
-    gap: 2.5rem;
-  }
+		h2 {
+			text-align: start;
+		}
+	}
 
-  .card {
-    width: 95%;
-    margin: auto;
-  }
+	.row {
+		flex-flow: column wrap;
+		margin: 0;
+		padding: 0 4vw 0 4vw;
+		gap: 2.5rem;
+		justify-content: center;
+	}
 
-  .wave {
-    margin-bottom: .4rem;
-    width: 100%;
-  }
+	.card {
+		width: 100%;
+		text-align: start;
+	}
+
+	.line {
+		position: absolute;
+		z-index: -1;
+		height: 100%;
+		width: 0%;
+		border-left: 4px dashed #ffecdc;
+	}
+
+	.wave {
+		margin-bottom: .4rem;
+		margin-top: 6vh;
+	}
 }
