--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,25 +2,46 @@
 @import './variables';
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Poppins', sans-serif;
 }
 
 body {
-  background-color: $off-white;
-  font-size: 16px;
-  color: $dark-blue;
-  overflow-x: hidden;
-
-  @media screen and (max-width: 568px) {
-    text-align: center;
-  }
+	background-color: $off-white;
+	font-size: 16px;
+	color: $dark-blue;
+	overflow-x: hidden;
 }
 
 h2 {
-  font-size: 1.875rem;
-  font-weight: 700;
-  color: $dark-blue;
+	font-size: 1.875rem;
+	font-weight: 700;
+	color: $dark-blue;
+
+	// for 1536px
+	@media screen and (max-height: 880px) and (max-width: 1536px) {
+		font-size: 1.6rem;
+	}
+
+	// for 1366px
+	@media screen and (max-height: 729px) and (max-width: 1366px) {
+		font-size: 1.4rem;
+	}
+
+	//for IPAD PRO
+	@media screen and (min-height: 1366px) and (max-width: 1024px) {
+		font-size: 2rem;
+	}
+
+	//for IPAD
+	@media screen and (min-height: 1024px) and (max-width: 768px) {
+		font-size: 1.6rem;
+	}
+
+	// for PHONES
+	@media screen and (min-height: 568px) and (max-width: 567px) {
+		font-size: 6vw;
+	}
 }
