--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -255,7 +255,7 @@
 // for PHONES
 @media screen and (max-width: 568px) {
 	.container {
-		padding: 8vw 4vw 0 4vw;
+		padding: 11vw 4vw 0 4vw;
 	}
 
 	.row {
@@ -319,6 +319,10 @@
 
 //for phones HORIZONTAL
 @media screen and (max-width: 812px) and (max-height: 567px) {
+	.container {
+		padding: 4vw 4vw 0 4vw;
+		margin-top: 1vw;
+	}
 	.contactForm {
 		.formGroup {
 			textarea {
