--- a/styles/ProjectModal.module.scss
+++ b/styles/ProjectModal.module.scss
@@ -374,15 +374,8 @@
 	}
 }
 
-// //for IPAD PRO
-// @media screen and(min-height: 1080px) and (max-width: 1024px) {
-// 	.projectModal {
-// 		width: 92vw;
-// 	}
-// }
-
-//for IPAD
-@media screen and (max-width: 1100px) {
+//for IPAD PRO
+@media screen and(min-height: 1080px) and (max-width: 1024px) {
 	.projectModal {
 		display: grid;
 		grid-template-areas: ' image' 'controls' 'description';
@@ -393,10 +386,76 @@
 		max-height: 94vh;
 
 		.closeBtn {
+			position: absolute;
+			top: 0.1rem;
+			right: 0rem;
+			background-color: transparent;
+			border: none;
+			font-size: 2rem;
+			cursor: pointer;
+			color: $gray;
+
+			&:hover {
+				color: $accent;
+			}
+		}
+
+		.buffer {
+			display: none;
+		}
+	}
+
+	.descriptionContainer {
+		display: flex;
+		justify-content: space-between;
+		flex-grow: 1;
+
+		.projectTitle {
+			margin-top: 0.8rem;
+			font-size: 1.5rem;
+		}
+		.projectTech {
+			margin-top: 0.8rem;
+			font-size: 1rem;
+		}
+		.projectSummary {
+			margin-top: 0.7rem;
+			line-height: 190%;
+		}
+	}
+
+	.btnContainer {
+		display: flex;
+		flex-flow: row wrap;
+		justify-content: flex-start;
+		align-items: center;
+		width: 100%;
+
+		.secondaryBtn {
+			margin-left: 1.5rem;
+		}
+	}
+}
+
+//for IPAD
+@media screen and (max-height: 1080px) and (max-width: 1100px) {
+	.projectModal {
+		position: fixed;
+		top: 3vh;
+		bottom: 3vh;
+		display: grid;
+		grid-template-areas: ' image' 'controls' 'description';
+		overflow-y: scroll;
+		overflow-x: hidden;
+		padding: 1.7rem;
+		width: 92vw;
+		max-height: 94vh;
+
+		.closeBtn {
 			position: fixed;
-			top: 8.5vh;
-			right: 6.5vh;
-			font-size: 3vw;
+			top: 1.7vh;
+			right: 4.5vh;
+			font-size: 2.8vh;
 			border-radius: 50%;
 			background-color: #1c2333;
 			color: $off-white;
