--- a/styles/WhyMe.module.scss
+++ b/styles/WhyMe.module.scss
@@ -49,7 +49,7 @@
 
 .wave {
 	margin-top: 8vh;
-	width: 100%;
+	width: 100vw;
 }
 
 //for squeezed MAC and 1920px
@@ -215,6 +215,7 @@
 	}
 
 	.line {
+		display: flex;
 		position: absolute;
 		z-index: -1;
 		height: 100%;
