--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -87,7 +87,7 @@
 		}
 	}
 
-	input[type="submit"] {
+	.submitBtn {
 		width: 8rem;
 		font-size: 1.2rem;
 		background-color: $accent;
@@ -155,7 +155,7 @@
 			}
 		}
 
-		input[type="submit"] {
+		.submitBtn {
 			width: 7.5rem;
 			font-size: 1.1rem;
 			padding: .2rem 0;
@@ -209,7 +209,7 @@
 			}
 		}
 
-		input[type="submit"] {
+		.submitBtn {
 			width: 7rem;
 			font-size: 1rem;
 			padding: .1rem 0;
@@ -299,7 +299,7 @@
 			}
 		}
 
-		input[type="submit"] {
+		.submitBtn {
 			width: 8rem;
 			font-size: 1.15rem;
 			padding: .25rem 0;
