submit button styling for mobile safari

--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -158,6 +158,8 @@
 
 		.submitBtn {
 			-webkit-appearance: none;
+			-moz-appearance: none;
+			appearance: none;
 			width: 7.5rem;
 			font-size: 1.1rem;
 			padding: .2rem 0;
