working on wave in whyme section

--- a/styles/WhyMe.module.scss
+++ b/styles/WhyMe.module.scss
@@ -137,7 +137,8 @@
 
 	.wave {
 		margin-top: 4.5rem;
-		width: 100%;
+		// width: 100%;
+		width: 100vw;
 	}
 }
 
@@ -177,7 +178,8 @@
 
 	.wave {
 		margin-top: 5rem;
-		width: 100%;
+		// width: 100%;
+		width: 100vw;
 	}
 }
 
