wave appearance none

--- a/styles/WhyMe.module.scss
+++ b/styles/WhyMe.module.scss
@@ -48,6 +48,9 @@
 }
 
 .wave {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 	margin-top: 8vh;
 	width: 100vw;
 }
@@ -178,7 +181,6 @@
 
 	.wave {
 		margin-top: 5rem;
-		// width: 100%;
 		width: 100vw;
 	}
 }
