--- a/styles/WhyMe.module.scss
+++ b/styles/WhyMe.module.scss
@@ -137,7 +137,7 @@
 
 	.wave {
 		margin-top: 4.5rem;
-		width: 100%;
+		width: 100vw;
 	}
 }
 
@@ -177,7 +177,7 @@
 
 	.wave {
 		margin-top: 5rem;
-		width: 100%;
+		width: 100vw;
 	}
 }
 
@@ -224,6 +224,7 @@
 	}
 
 	.wave {
+		width: 100vw;
 		margin-bottom: .4rem;
 		margin-top: 6vh;
 	}
