replaced demo button

--- a/styles/Projects.module.scss
+++ b/styles/Projects.module.scss
@@ -93,6 +93,7 @@
 			cursor: pointer;
 			font-size: 1.13rem;
 			font-weight: 400;
+			text-decoration: none;
 
 			.githubIcon {
 				font-size: 1.1rem;
