--- a/styles/ProjectModal.module.scss
+++ b/styles/ProjectModal.module.scss
@@ -1,10 +1,6 @@
 @import "./variables";
 @import "./mixins";
 
-.demoBtnMobile {
-	display: none;
-}
-
 .modalContainer {
 	position: fixed;
 	top: 0;
@@ -71,6 +67,23 @@
 	}
 }
 
+.projectHeader {
+	display: flex;
+	flex-flow: row-wrap;
+	align-items: center;
+	width: 100%;
+}
+
+.demoBtnMobile {
+	display: inline-block;
+	display: flex;
+	align-self: center;
+	align-items: center;
+	text-decoration: none;
+	color: $accent;
+	gap: 0.3rem;
+}
+
 .descriptionContainer {
 	display: flex;
 	flex-direction: column;
@@ -81,7 +94,7 @@
 		font-size: 1.7rem;
 		font-weight: 700;
 		color: $dark-blue;
-		margin-right: 1.5rem;
+		margin-right: 1rem;
 	}
 	.projectTech {
 		margin-top: 1rem;
@@ -143,7 +156,7 @@
 		font-size: 1.1rem;
 		color: $medium-blue;
 		font-weight: 300;
-		margin-left: 1vw;
+		margin-left: 1.5vw;
 
 		&:hover {
 			color: $accent;
@@ -414,16 +427,9 @@
 		justify-content: space-between;
 		flex-grow: 1;
 
-	
-
 		.projectTitle {
 			display: inline-block;
-			margin-top: 0.8rem;
 			font-size: 1.5rem;
-		}
-
-		.demoBtnMobile {
-			display: inline-block;
 		}
 
 		.projectTech {
@@ -446,11 +452,6 @@
 		.secondaryBtn {
 			margin-left: 1.5rem;
 		}
-
-		.demoBtnDesktop {
-			display: none;
-		}
-
 	}
 }
 
@@ -462,6 +463,7 @@
 		bottom: 3vh;
 		display: grid;
 		grid-template-areas: ' image' 'controls' 'description';
+		grid-template-rows: auto auto 1fr;
 		overflow-y: scroll;
 		overflow-x: hidden;
 		padding: 1.7rem;
@@ -488,18 +490,13 @@
 		display: flex;
 		justify-content: space-between;
 		flex-grow: 1;
+		margin-top: 0.8rem;
 
 		.projectTitle {
 			display: inline;
-			margin-top: 0.8rem;
 			font-size: 1.5rem;
 		}
 
-		.demoBtnMobile {
-			display: inline;
-		}
-
-		
 		.projectTech {
 			margin-top: 0.8rem;
 			font-size: 1rem;
@@ -520,11 +517,6 @@
 		.secondaryBtn {
 			margin-left: 1.5rem;
 		}
-
-		.demoBtnDesktop {
-			display: none;
-		}
-
 	}
 }
 
@@ -571,7 +563,6 @@
 		flex-grow: 1;
 
 		.projectTitle {
-			margin-top: 0.8rem;
 			font-size: 1.5rem;
 		}
 
@@ -623,7 +614,6 @@
 
 //for phones HORIZONTAL
 @media screen and (max-width: 812px) and (max-height: 567px) {
-	
 	.projectModal {
 		top: 2vh;
 		bottom: 2vh;
